Include JS script for checkoutpage

--- a/Shoe-edit/shoestore-master/adidascushionedblack.html
+++ b/Shoe-edit/shoestore-master/adidascushionedblack.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Adidas Mens Cushioned White</title>
 	<link rel="stylesheet" type="text/css" href="css/xang.css">
-
+	<script src=js/function.js"> </script>
 </head>
 <body>
 
