--- a/Shoe-edit/shoestore-master/newbalancecore.html
+++ b/Shoe-edit/shoestore-master/newbalancecore.html
@@ -52,8 +52,8 @@
 			<p>
 				Stay dry in the Cotton Core no show socks from New Balance! This 3 pack of socks feature cushioning and support to help you tackle whatever the day brings you.
 			</p>
-			<label id="pricelabel">Price: $</label>
-			<p id="prices"style="color:red">4.00</p>
+			<label id="pricelabel">Price: $   </label>  &nbsp;
+			 <p id="prices"style="color:red" margin-top: -15%;> 4.00</p>
 			
 		<div id="button-box">
 			
