--- a/Shoe-edit/shoestore-master/Womenshoe.html
+++ b/Shoe-edit/shoestore-master/Womenshoe.html
@@ -51,27 +51,27 @@
 				<img src="images/shoe/womenShoe/11930_BKW.jpg" width="200" height="200"  alt="Classic design and lasting comfort is exactly what you'll find in the SKECHERS® D'Lites Biggest Fan athletic-inspired sneaker." >
 				<p>SKECHERS D'Lites - Biggest Fan</p>
 				 <p id="price">$50.00 </p>
-				<button><a href="sketchersdlites.html">Add to View</a></button>
+				<button><a href="sketchersdlites.html">Click to View</a></button>
 			</td>
 			<td id="product2">
 				<img src="images/shoe/womenShoe/ASCIS.jpg" width="200" height="200"
 				 alt="The ASICS® GEL-Quantum® 90 running shoe has a versatile look that lets you wear it for casual occasions while still providing superior support and cushioning to keep you moving at your best mile after mile." >
 				 <p id="title">ASICS GEL-Quantum® 90</p>
 				 <p id="price">$40.00</p>
-				<button><a href="asicsgelquantum.html">Add to View</a></button>
+				<button><a href="asicsgelquantum.html">Click to View</a></button>
 			</td>
 			<td id="product3">
 				<img src="images/shoe/womenShoe/Dansko.jpg" width="200" height="200" 
 				 alt="Channel those athleisure vibes to the fullest with the Dansko® Adrianne sneaker. Breathable fabric mesh upper. Lace-up construction with loop eyelets.">
 				 <p>Dansko Adrianne</p>
 				 <p id="price">$55.00</p>
-				<button><a href="DanskoAdrianne.html">Add to View</a></button>
+				<button><a href="DanskoAdrianne.html">Click to View</a></button>
 			</td>
 			<td id="product4">
 				<img src="images/shoe/womenShoe/Native.jpg" width="200" height="200" alt="Check all the right boxes with the easy comfort and lightweight design of the Native® Shoes Jefferson 2.0 High shoe! High-top silhouette offers a classic look.">
 				<p>Native Shoes Jefferson 2.0 High</p>
 				<p id="price">$45.00</p>
-				<button><a href="nativejefferson.html">Add to View</a></button>
+				<button><a href="nativejefferson.html">Click to View</a></button>
 			</td>
 		</tr>
 		<tr>
@@ -79,25 +79,25 @@
 				<img src="images/shoe/sock/womenSock/adidasSuperlite.jpeg" width="200" height="200" alt="The Superlite no show socks from adidas flaunt the iconic tri-stripe design but are upgraded with modern technology. Climalite yarns wick moisture while the superlite construction keeps it lightweight for all day comfort.">
 				<p>ADIDAS SUPERLITE WOMEN'S NO SHOW SOCKS</p>
 				<p id="price">$4.00 </p>
- 				<button><a href="adidassuperlite.html">Add to View</a></button>
+ 				<button><a href="adidassuperlite.html">Click to View</a></button>
 			</td>
 			<td id="product6">
 				<img src="images/shoe/sock/womenSock/hueHoiserywomen.jpeg" width="200" height="200" alt="Keep your feet feeling good all through your workout with these HUE Sport No Show Liner socks. With this great 6 pack of comfortable sport socks you can keep your workout going all week long!">
 				<p>HUE HOSIERY WOMEN'S NO SHOW LINERS</p>
 				<p id="price">$4.00 </p>
-				<button><a href="huehosiery.html">Add to View</a></button>
+				<button><a href="huehosiery.html">Click to View</a></button>
 			</td>
 			<td id="product7">
 				<img src="images/shoe/sock/womenSock/lemonStriped.jpeg" width="200" height="200" alt="Feel extra cozy with the Striped no show socks from Lemon. Featuring an ultra-soft construction and classic stripe design, these low-tops socks will become your new favorite.">
 				<p>LEMON STRIPED WOMEN'S NO SHOW SOCKS</p>
 				<p id="price">$5.00 </p>
-			<button><a href="lemonstriped.html">Add to View</a></button>
+			<button><a href="lemonstriped.html">Click to View</a></button>
 			</td>
 			<td id="product8">
 				<img src="images/shoe/sock/womenSock/newBalancecoreCotton.jpeg" width="200" height="200" alt="Stay dry while working up a sweat in the Cotton Core no show socks from New Balance! This 3 pack of socks feature cushioning and support to help you tackle whatever the day brings you in ultimate comfort.">
 				<p>NEW BALANCE CORE COTTON WOMEN'S NO SHOW SOCKS </p>
  					<p id="price">$4.00 </p>
- 				<button><a href="newbalancecore.html">Add to View</a></button>
+ 				<button><a href="newbalancecore.html">Click to View</a></button>
 			</td>
 		</tr>
 	</table>
