--- a/Shoe-edit/shoestore-master/menShoes.html
+++ b/Shoe-edit/shoestore-master/menShoes.html
@@ -58,19 +58,19 @@
 				<img id="shoeName" src="images/shoe/menShoe/air_mag.jpg" width="200" height="200" alt="Nike inspired a future vision of footwear — an individually responsive shoe that senses the wearer and adapts on its own" >
 				<p id="title"> Nike Air Mag</p>
 				<p id="price">$40.00 </p>
-				<button id="add2"><a href="nikeairmag.html">Add to view</a></button>
+				<button id="add2"><a href="nikeairmag.html">Click to view</a></button>
 			</td>
 			<td id="product3">
 				<img id="shoeName" src="images/shoe/menShoe/ASCI.jpg" width="200" height="200"  alt="A smooth, comfortable ride that's 20 years in the making. Packed with our revolutionary lightweight FlyteFoam® cushioning, FluidRide® Midsole and discreet eyelet construction, the Nimbus caters to neutral runners of aall levels.">
 				<p id="title">ASICS® GEL-Nimbus® 20</p>
 				<p id="price">$55.00 </p>a
-				<button id="add3"><a href="asicsgelnimbus.html">Add to view</a></button>
+				<button id="add3"><a href="asicsgelnimbus.html">Click to view</a></button>
 			</td>
 			<td id="product4">
 				<img id="shoeName" src="images/shoe/menShoe/Emerica.jpg" width="200" height="200" alt=", Emerica Triangle Tread pattern with high-density rubber heel drag pod for maximum grip and durability, and a tongue stabilizing wing for a snug fit if you decide to grind up a rail." >
 				<p id="title">Emerica Romero Laced High</p>
 				<p id="price">$45.00 </p>
-				<button id="add4"><a href="emericaromeo.html">Add to view</a></button>
+				<button id="add4"><a href="emericaromeo.html">Click to view</a></button>
 			</td>
 		</tr>
 		
