--- a/Shoe-edit/shoestore-master/womenShoes.html
+++ b/Shoe-edit/shoestore-master/womenShoes.html
@@ -52,27 +52,27 @@
 				<img src="images/shoe/womenShoe/11930_BKW.jpg" width="200" height="200"  alt="Classic design and lasting comfort is exactly what you'll find in the SKECHERS® D'Lites Biggest Fan athletic-inspired sneaker." >
 				<p>SKECHERS D'Lites - Biggest Fan</p>
 				 <p id="price">$50.00 </p>
-				<button><a href="sketchersdlites.html">Add to View</a></button>
+				<button><a href="sketchersdlites.html">Click to View</a></button>
 			</td>
 			<td id="product2">
 				<img src="images/shoe/womenShoe/ASCIS.jpg" width="200" height="200"
 				 alt="The ASICS® GEL-Quantum® 90 running shoe has a versatile look that lets you wear it for casual occasions while still providing superior support and cushioning to keep you moving at your best mile after mile." >
 				 <p id="title">ASICS GEL-Quantum® 90</p>
 				 <p id="price">$40.00</p>
-				<button><a href="asicsgelquantum.html">Add to View</a></button>
+				<button><a href="asicsgelquantum.html">Click to View</a></button>
 			</td>
 			<td id="product3">
 				<img src="images/shoe/womenShoe/Dansko.jpg" width="200" height="200" 
 				 alt="Channel those athleisure vibes to the fullest with the Dansko® Adrianne sneaker. Breathable fabric mesh upper. Lace-up construction with loop eyelets.">
 				 <p>Dansko Adrianne</p>
 				 <p id="price">$55.00</p>
-				<button><a href="DanskoAdrianne.html">Add to View</a></button>
+				<button><a href="DanskoAdrianne.html">Click to View</a></button>
 			</td>
 			<td id="product4">
 				<img src="images/shoe/womenShoe/Native.jpg" width="200" height="200" alt="Check all the right boxes with the easy comfort and lightweight design of the Native® Shoes Jefferson 2.0 High shoe! High-top silhouette offers a classic look.">
 				<p>Native Shoes Jefferson 2.0 High</p>
 				<p id="price">$45.00</p>
-				<button><a href="nativejefferson.html">Add to View</a></button>
+				<button><a href="nativejefferson.html">Click to View</a></button>
 			</td>
 		</tr>
 		
