--- a/Shoe-edit/shoestore-master/womenSocks.html
+++ b/Shoe-edit/shoestore-master/womenSocks.html
@@ -52,25 +52,25 @@
 				<img src="images/shoe/sock/womenSock/adidasSuperlite.jpeg" width="200" height="200" alt="The Superlite no show socks from adidas flaunt the iconic tri-stripe design but are upgraded with modern technology. Climalite yarns wick moisture while the superlite construction keeps it lightweight for all day comfort.">
 				<p>ADIDAS SUPERLITE WOMEN'S NO SHOW SOCKS</p>
 				<p id="price">$4.00 </p>
- 				<button><a href="adidassuperlite.html">Add to View</a></button>
+ 				<button><a href="adidassuperlite.html">Click to View</a></button>
 			</td>
 			<td id="product2">
 				<img src="images/shoe/sock/womenSock/hueHoiserywomen.jpeg" width="200" height="200" alt="Keep your feet feeling good all through your workout with these HUE Sport No Show Liner socks. With this great 6 pack of comfortable sport socks you can keep your workout going all week long!">
 				<p>HUE HOSIERY WOMEN'S NO SHOW LINERS</p>
 				<p id="price">$4.00 </p>
-				<button><a href="huehosiery.html">Add to View</a></button>
+				<button><a href="huehosiery.html">Click to View</a></button>
 			</td>
 			<td id="product3">
 				<img src="images/shoe/sock/womenSock/lemonStriped.jpeg" width="200" height="200" alt="Feel extra cozy with the Striped no show socks from Lemon. Featuring an ultra-soft construction and classic stripe design, these low-tops socks will become your new favorite.">
 				<p>LEMON STRIPED WOMEN'S NO SHOW SOCKS</p>
 				<p id="price">$5.00 </p>
-			<button><a href="lemonstriped.html">Add to View</a></button>
+			<button><a href="lemonstriped.html">Click to View</a></button>
 			</td>
 			<td id="product4">
 				<img src="images/shoe/sock/womenSock/newBalancecoreCotton.jpeg" width="200" height="200" alt="Stay dry while working up a sweat in the Cotton Core no show socks from New Balance! This 3 pack of socks feature cushioning and support to help you tackle whatever the day brings you in ultimate comfort.">
 				<p>NEW BALANCE CORE COTTON WOMEN'S NO SHOW SOCKS </p>
  					<p id="price">$4.00 </p>
- 				<button><a href="newbalancecore.html">Add to View</a></button>
+ 				<button><a href="newbalancecore.html">Click to View</a></button>
 			</td>
 		</tr>
 		
